# MorphView

./: .gitignore  amvera.yml  docker-compose-dev.yml  docker-compose.yml  dockerfile  nginx-conf.d  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
MorphViewBlog/: manage.py  services.py  utils.py
MorphViewBlog/MorphViewBlog/: asgi.py  settings.py  urls.py  wsgi.py
MorphViewBlog/auth_app/: forms.py  urls.py  views.py
MorphViewBlog/auth_app/templates/auth_app/: BaseAuth.html
MorphViewBlog/auth_app/templates/password_reset/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
MorphViewBlog/auth_app/templates/registration/: Register.html  login.html
MorphViewBlog/blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
MorphViewBlog/blog/migrations/: 0001_initial.py  0002_article_is_published.py
MorphViewBlog/blog/templates/blog/: ArticleDetail.html  (+7 more)
nginx-conf-d/: .default.swp  default-http.conf  default.conf  dockerfile  nginx.conf
persistentdata/: postmaster.pid
persistentdata/base/16384/: 1247  1249  1249_fsm  1259  16385  16386  16390  16391  16393  16394  16397  16399  16401  16402  16405  16407  16413  16415  16419  16421  16422  16425  16427  16429  16435  16441  16448  16449  16450  16462  16464  16465  16477  16478  16479  16492  16493  16500  16512  16513  (+47 more)
persistentdata/db/: postmaster.pid
persistentdata/db/global/: 1260  1262  2671  pg_control  pg_internal.init
persistentdata/global/: 1260  pg_control  pg_internal.init
(+122 files in other folders)
